--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(GeminiCellType)
 export(Gemini_generate_gene_text)
 export(Gemini_input)
 export(Gemini_interact)
+export(Install_module)
 export(LLMCelltype)
 export(LLM_interect)
 export(Llama3_input)
