--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,8 @@ export(LLM_interect)
 export(Llama3_input)
 export(Llama3_interact)
 export(LlamaCellType)
+export(MarkerPrompt)
+export(Validate)
 export(generate_gene_text)
 import(dplyr)
 import(reticulate)
