--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(ERNIECellType)
 export(ERNIE_generate_gene_text)
 export(ERNIE_input)
 export(ERNIE_interact)
+export(Feedback_Info)
 export(GPTCellType)
 export(GPT_generate_gene_text)
 export(GPT_input)
@@ -17,13 +18,14 @@ export(GeminiCellType)
 export(Gemini_generate_gene_text)
 export(Gemini_input)
 export(Gemini_interact)
-export(LLMCelltype)
+export(LLMCellType)
 export(LLM_interect)
 export(Llama3_input)
 export(Llama3_interact)
 export(LlamaCellType)
 export(MarkerPrompt)
 export(Validate)
+export(Validate_Result_to_Df)
 export(generate_gene_text)
 import(dplyr)
 import(reticulate)
