--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,9 +24,11 @@ export(Llama3_input)
 export(Llama3_interact)
 export(LlamaCellType)
 export(MarkerPrompt)
+export(Reliable_Df)
 export(Validate)
 export(Validate_Result_to_Df)
 export(generate_gene_text)
+export(intersect_result)
 import(dplyr)
 import(reticulate)
 import(stringr)
